<resources>
    <string name="app_name">Swan</string>
    <!--共用文字-->
    <string name="common_username_title">账号</string>
    <string name="common_username_tip">请输入账号</string>
    <string name="common_pwd_title">密码</string>
    <string name="common_pwd_tip">请输入密码</string>
    <!--登录页面-->
    <string name="login">登录</string>
    <string name="login_title">登录Swan</string>
    <string name="login_forget_pwd_title">忘记密码?</string>
    <string name="login_submit_title">登&#160;录</string>
    <string name="login_new_user">新用户?</string>
    <string name="login_register">&#160;注册一个账号</string>
    <!--注册页面-->
    <string name="register">注册</string>
    <string name="register_title">注册一个你的账号</string>
    <string name="register_confirm_pwd_title">确认密码</string>
    <string name="register_confirm_pwd_tip">请再输入一次密码</string>
    <string name="register_captcha_title">验证码</string>
    <string name="register_captcha_tip">请输入验证码</string>
    <string name="register_submit_title">注&#160;册</string>
    <!--忘记密码页面-->
    <string name="forget">忘记密码</string>
    <string name="forget_pwd_title">修改密码</string>
    <string name="forget_pwd_new_pwd_title">新密码</string>
    <string name="forget_pwd_new_pwd_tip">请输入新密码</string>
    <string name="forget_pwd_confirm_new_pwd_title">确认新密码</string>
    <string name="forget_pwd_confirm_new_pwd_tip">请再输入一次新密码</string>
    <!--搜索页面-->
    <string name="search_tip">搜索...</string>
    <string name="search_clear">清空历史记录</string>
    <!--个人中心页面-->
    <string name="menu_title">个人中心</string>
    <!--Poi-->
    <string name="poi_no_result">对不起，没有搜索到相关数据！</string>
    <!--搜索地点后的建议-->
    <string name="main_bottom_search_nearby_title">搜附近</string>
    <string name="main_bottom_navigation_title">导航</string>
    <string name="main_bottom_route_title">路线</string>
    <!--路线页面-->
    <string name="route_cross_city_bus">跨城公交</string>
    <string name="route_details">详情</string>
    <!--驾车路线详情页面-->
    <string name="drive_route_details">驾车路线详情</string>
    <string name="drive_route_details_map">地图</string>
    <!--导航页面-->
    <string name="navigation_start_point_tip">我的位置</string>
    <string name="navigation_end_point_tip">输入终点</string>
    <string name="navigation_drive_title">驾车</string>
    <string name="navigation_bus_title">公交</string>
    <string name="navigation_walk_title">步行</string>
</resources>
