<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorBackground"
        >

        <!--头部的logo和标题-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="30dp"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/logo"
                android:scaleType="fitCenter"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_title"
                android:textColor="@color/colorTitle"
                android:textSize="24sp"
                android:layout_marginTop="22dp"
                />

        </LinearLayout>

        <!--登录信息输入框-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/common_border"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingTop="25dp"
            android:paddingRight="30dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/common_username_title"
                android:textSize="14sp"
                android:textColor="@color/colorTextView"
                android:textStyle="bold"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/common_edit_text_border"
                android:hint="@string/common_username_tip"
                android:inputType="text"
                android:padding="8dp"
                android:textSize="14sp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/common_pwd_title"
                    android:textColor="@color/colorTextView"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_forget_pwd_title"
                    android:textColor="@color/colorForget"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    />

            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/common_edit_text_border"
                android:hint="@string/common_pwd_tip"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textSize="14sp"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_submit_title"
                android:textColor="@color/colorLight"
                android:textSize="14sp"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="18dp"
                android:background="@drawable/common_submit_border"
                android:minHeight="0dp"
                android:padding="8dp"
                android:textStyle="bold"
                />
        </LinearLayout>

        <!--新用户注册-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/edit_text_border_normal"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_new_user"
                android:textColor="@color/colorTextView"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/login_tv_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_register"
                android:textColor="@color/colorForget"
                android:textSize="14sp"
                android:clickable="true"
                android:focusable="true"
                />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>