<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:orientation="vertical"
        >

        <!--头部的logo和标题-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="30dp"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/logo"
                android:scaleType="fitCenter"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_title"
                android:textColor="@color/colorTitle"
                android:textSize="24sp"
                android:layout_marginTop="22dp"
                />

        </LinearLayout>

        <!--注册信息输入框-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/common_border"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingTop="25dp"
            android:paddingRight="30dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            >

            <!--账号文字-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/common_username_title"
                android:textColor="@color/colorTextView"
                android:textSize="14sp"
                android:textStyle="bold" />
            <!--账号输入框-->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/common_edit_text_border"
                android:hint="@string/common_username_tip"
                android:inputType="number|phone"
                android:padding="8dp"
                android:textSize="14sp"
                android:autofillHints="@string/common_username_title"
                />

            <!--密码文字-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/common_pwd_title"
                android:textColor="@color/colorTextView"
                android:textSize="14sp"
                android:textStyle="bold"
                />

            <!--密码输入框-->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/common_edit_text_border"
                android:hint="@string/common_pwd_tip"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textSize="14sp"
                android:autofillHints="@string/common_pwd_tip"
                />

            <!--确认密码文字-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_confirm_pwd_title"
                android:textColor="@color/colorTextView"
                android:textSize="14sp"
                android:textStyle="bold"
                />

            <!--确认密码输入框-->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="28dp"
                android:background="@drawable/common_edit_text_border"
                android:hint="@string/register_confirm_pwd_tip"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textSize="14sp"
                android:autofillHints="@string/register_confirm_pwd_tip"
                />
        </LinearLayout>

        <!--注册按钮-->
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_submit_title"
            android:textColor="@color/colorLight"
            android:textSize="14sp"
            android:layout_margin="30dp"
            android:background="@drawable/common_submit_border"
            android:minHeight="0dp"
            android:padding="8dp"
            android:textStyle="bold"
            />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>