<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorBackground"
        >

        <com.qmuiteam.qmui.widget.QMUITopBar
            android:id="@+id/menu_top_bar"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            app:qmui_topbar_bg_color="@color/colorBackground">

            <ImageView
                android:id="@+id/login_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="7dp"
                android:src="@drawable/ic_icon_sample_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="11dp"
                android:text="@string/main_bottom_navigation_title"
                android:textColor="@color/colorTextView"
                android:textSize="16sp" />
        </com.qmuiteam.qmui.widget.QMUITopBar>

        <!--输入起点和终点，起点默认为 我的位置 ，点击输入起点或输入终点会跳转到activity_search-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="60dp"
            android:paddingEnd="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/navigation_nav_mode_border"
            android:elevation="10dp"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/navigation_start_point_tip"
                android:drawableStart="@drawable/ic_icon_start_point"
                android:background="@color/colorLight"
                android:paddingTop="10dp"
                android:textSize="14sp"
                android:textColor="@color/colorTextView"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorBorder"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/navigation_end_point_tip"
                android:drawableStart="@drawable/ic_icon_end_point"
                android:background="@color/colorLight"
                android:paddingBottom="10dp"
                android:textSize="14sp"
                />

            <!--选择导航的方式：驾车、公交、步行-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="15dp"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/navigation_drive_title"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:drawableStart="@drawable/ic_icon_drive"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/navigation_bus_title"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:drawableStart="@drawable/ic_icon_bus"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/navigation_walk_title"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:drawableStart="@drawable/ic_icon_walk"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>