<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/main_bottom_layout"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/main_bottom_search_nearby"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_icon_nearby"
            android:gravity="center"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:text="@string/main_bottom_search_nearby_title"
            android:textColor="@color/colorTextView"
            android:textSize="16sp" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorBorder" />

        <TextView
            android:id="@+id/main_bottom_navigation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_icon_navigation"
            android:gravity="center"
            android:paddingStart="30dp"
            android:paddingTop="10dp"
            android:paddingEnd="30dp"
            android:paddingBottom="10dp"
            android:text="@string/main_bottom_navigation_title"
            android:textColor="@color/colorTextView"
            android:textSize="16sp" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorBorder" />

        <TextView
            android:id="@+id/main_bottom_route"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_icon_route"
            android:gravity="center"
            android:paddingStart="40dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:text="@string/main_bottom_route_title"
            android:textColor="@color/colorTextView"
            android:textSize="16sp" />


    </LinearLayout>
</android.support.constraint.ConstraintLayout>